--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,8 @@
     "recommendations": [
         "streetsidesoftware.code-spell-checker-portuguese-brazilian",
         "ms-ceintl.vscode-language-pack-pt-br",
-        "ms-vscode.live-server",
         "vue.volar",
-        "funkyremi.vscode-google-translate"
+        "funkyremi.vscode-google-translate",
+        "shd101wyy.markdown-preview-enhanced"
     ]
 }
